# pwhw9

./: authors.json  config.ini  insert.py  main.py  pyproject.toml
part_1_mongo/: connect.py  models.py
