[tool.poetry]
name = "pwhw09"
version = "0.1.0"
description = ""
authors = ["STsapko <stsapko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.10.0"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
